Fix HTML formatting and ensure proper structure

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <!-- Galerie d'images avec description -->
              <div class="hero-gallery">
                 <figure class="gallery-item">
-                    <img src="Photo_Alexis.jpg" alt="ALEXIS KOUAKOU" class="gallery-image">
+                    <img src="Photo_Alexis.jpg" alt="AYEDESS ALEXIS KOUAKOU" class="gallery-image">
                     <figcaption><strong>AYEDESS ALEXIS</strong><br><b>Aîné</b></figcaption>
                 </figure>
 
@@ -60,4 +60,5 @@
     <div id="caption"></div>
 </div>
 </body>
+
 </html>
