Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </figure>
 
                 <figure class="gallery-item">
-                    <img src="Photo_Prisca.jpg" alt="PRISCA SANATA JULIETTEKOUAKOU" class="gallery-image">
+                    <img src="Photo_Prisca.jpg" alt="PRISCA SANATA JULIETTE KOUAKOU" class="gallery-image">
                     <figcaption><strong>PRISCA SANATA JULIETTE</strong><br><b>2ème Benjamine</b></figcaption>
                 </figure>
              </div>
@@ -62,3 +62,4 @@
 </body>
 
 </html>
+
